--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -2245,7 +2245,7 @@ input[type="radio"]:checked + label span {
 }
 .input-box .span-in{
     position: absolute;
-    left: 11px;
+    left: 5px;
     font-size: 14px;
     color: #666666;
     font-weight: 600;
@@ -3554,6 +3554,22 @@ display: inline-block;margin-left: 13px;}
 	border-bottom-color: #e2e2e2;
 	border-radius: .25em;
 	width: 147px;
+	height: 40px;
+}
+
+.filebox label-1 {
+	display: inline-block;
+	padding: .5em .75em;
+	color: #999;
+	font-size: inherit;
+	line-height: normal;
+	vertical-align: middle;
+	background-color: #fdfdfd;
+	cursor: pointer;
+	border: 1px solid #ebebeb;
+	border-bottom-color: #e2e2e2;
+	border-radius: .25em;
+	width: 117px;
 	height: 40px;
 }
 
@@ -4917,3 +4933,70 @@ position: relative;background-color: #fbfbfb;}
 .login-body .id-box{padding: 45px;}
 .login-body .id-box .input-group input{width:255px;}
 /* 추가 끝 */
+
+
+
+
+/* 0501 */
+.auth-div{padding:13px 40px;}
+.md-ds2{
+    text-align: center;
+    color: #333;
+    font-weight: 600;
+    font-size: 21px;
+    padding: 25px 0 30px 0;
+}
+
+.is-sum button.is-bg{background: #e9625c;color: #fff;border: #c9504b 1px solid;margin-left: 3px;}
+.mg_b10{margin-bottom:10px;}
+
+.filebox .upload-name2 {
+	display: inline-block;
+	padding: .5em .75em;
+	font-size: inherit;
+	vertical-align: middle;
+	appearance: none;
+	width: 323px;
+	height: 40px;
+	border: #cccccc 1px solid;
+	padding-left: 15px;
+	background-color: #fff;
+	color: #97989b;
+}
+.panel-contact{text-align: center;}
+.panel-contact > div{display: inline-block;text-align: center;}
+.act-0{}
+.act-1{width: 50%;}
+.act-2{width: 20%;border-right: #dcdcdc 1px solid;border-left: #dcdcdc 1px solid;}
+.act-3{width: 20%;}
+
+.panel-top{padding: 23px 23px;background: #f7f7f7;border-top: #dcdcdc 1px solid;text-align: center;}
+.panel-top > div{font-size: 15px;display: inline-block;text-align: center;}
+.panel-top .panto-1{width: 50%;}
+.panel-top .panto-2{width: 20%;border-right: #dcdcdc 1px solid;border-left: #dcdcdc 1px solid;}
+.panel-top .panto-3{width: 20%;}
+
+.panel-group4{ border: none;}
+.panel-default4{ margin-bottom: 0;}
+.panel-group4 .panel{ border-radius: 0; border: none; margin-top: 0 !important; box-shadow: none;}
+.panel-default4>.panel-heading4{ /* background: #f9f9f9; */ border-top: #dcdcdc 1px solid; border-bottom: #e8e8e8 1px solid;padding: 23px 23px;position: relative;}
+.panel-default4>.panel-heading4:after{content:'';/* position: absolute; */left: 25px;top: 50%;/* background-image: url(../img/about/icon-q.png); */width: 27px;height: 27px;background-size: auto;transform: translateY(-50%);}
+.panel-title4{ font-size: 15px; font-weight: 600;color: #333333;}
+.panel-title4 a{  width: 100%; display: block; position: relative;}
+.panel-title4 a.collapsed .collapsdiv:after{content:'';width: 16px;height: 11px;position: absolute;right: 15px;top: 50%;margin-top: -5px;background-image: url(../img/mypage/ar-down.png);background-size: 16px 11px;}
+.panel-title4 a  .collapsdiv:before{content:'';width:16px;height:11px;position: absolute;right: 15px;top: 50%;margin-top: -5px;background-image: url(../img/mypage/ar-up.png);background-size: 16px 11px;}
+
+.panel-collapse4{ border: none; position: relative; padding-bottom: 0;}
+.panel-collapse4 .panel-body{padding: 0;}
+.panel-collapse4 .panel-body .coll-text{border: none;border-bottom: #e8e8e8 1px solid;padding: 30px 30px; font-size: 14px; color: #999999; font-weight: 600; line-height: 1.83; position: relative;background-color: #fbfbfb;}
+.panel-collapse4 .panel-body .coll-text:after{content:'';position: absolute;left: 25px;top: 38px;/* background-image: url(../img/about/icon-a.png); */width: 27px;height: 27px;background-size: auto;/* transform: translateY(-50%); */}
+.panel-collapse4 in{}
+.panel-collapse4:after{content:'';}
+.panel-collapse4:before in{content:'';}
+.panel-default4>.panel-heading2+.panel-collapse2>.panel-body{ border: none; padding: 0;}
+.panel-title4 .collapsdiv{background: none;padding: 0;}
+.panel-title4 a .collapsdiv:before{background-image: url(../img/about/arr-b.png);width: 23px;height: 12px;background-size: auto;}
+.panel-title4 a.collapsed .collapsdiv:after{background-image: url(../img/about/arr-t.png);width: 23px;height: 12px;background-size: auto;background-color: #fff;}
+
+
+
