--- a/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
@@ -101,7 +101,7 @@
 		                </a>
 		              </li>
 		              <li class="nav-item">
-		                <a href="#" class="nav-link">
+		                <a href="/admin/board/boardList?brdTypCd=FA" class="nav-link">
 		                  <i class="far fa-circle nav-icon sTitle"></i>
 		                  <p class="sTitle">FAQ</p>
 		                </a>
