--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -357,13 +357,12 @@ function myWorkReg(){
 		result.keywrd = $("#keywrd").val();
 		result.mbrSq = sMbrSqVal;
 		result.artstSq = artstSq;
-		result.artstNm = artstActvtyNm;
+		result.artstActvtyNm = artstActvtyNm;
 		result.artstEnglsNm = artstEnglsNm;
 		result.artstBirthYear = artstBirthYear;
 		result.workPrc = $("#workPrc").val();
 		result.workVideoUrl = $("#workVideoUrl").val();
 		result.workIntrdc = $("#workIntrdc").val();
-		result.keywrd = $("#keywrd").val();
 		const file = document.getElementsByClassName("upload-hidden");
 	    const formData = new FormData();
 	    for(var i=0; i<file.length; i++){
