--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -363,7 +363,7 @@ function myWorkReg(){
 	if(checkValid()){
 		work.mbrSq = sMbrSqVal;
 		work.artstSq = artstSq;
-		work.artstNm = artstActvtyNm;
+		work.artstActvtyNm = artstActvtyNm;
 		work.artstEnglsNm = artstEnglsNm;
 		work.artstBirthYear = artstBirthYear;
 		work.workPrc = $("#workPrc").val();
