--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -241,7 +241,7 @@ function myWorkList(){
 			myWorkListHtml += '		</div>';
 			myWorkListHtml += '	</div>';
 		}
-		if(result[i].dealTypCd == "SALE" && result[i].dealTypCd == "IP"){
+		if(result[i].dealTypCd == "A" && result[i].dealTypCd == "TP"){
 			myWorkListHtml += '	<div class="item-div-img sale-on">';
 			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
 			myWorkListHtml += '		<div class="item-ho2 sale-div">';
