--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -40,7 +40,7 @@
 							<table class="mstyle-2">
 								<tr>
 									<th><span class="my-red">작가명</span></th>
-									<td><input type="text" class="input-4" id="artstNm" th:value="${result.artstActvtyNm}"/></td>
+									<td><input type="text" class="input-4" id="artstActvtyNm" th:value="${result.artstActvtyNm}"/></td>
 								</tr>
 								<tr>
 									<th>출생년도</th>
@@ -449,7 +449,7 @@ var storage = new Object();
 $(function() {   
 	if(sessionStorage.getItem("work") != null){
 		storage = JSON.parse(sessionStorage.getItem("work"));
-		$("#artstNm").val(storage.artstNm);
+		$("#artstActvtyNm").val(storage.artstActvtyNm);
 		$("#artstYear").val(storage.artstYear);
 		$("#workNm").val(storage.workNm);
 		$('input:radio[name="workFrmYn"][value="'+storage.workFrmYn+'"]').prop('checked', true);
@@ -510,10 +510,10 @@ function collectionReg(){
 }
 
 function checkValid(){
-	if($("#artstNm").val() != null && $("#artstNm").val() != ""){
-		result.artstNm = $("#artstNm").val();
+	if($("#artstActvtyNm").val() != null && $("#artstActvtyNm").val() != ""){
+		result.artstActvtyNm = $("#artstActvtyNm").val();
 	}else{
-		modalAlertShow("작가명이 입력되지 않았습니다!", "artstNm");
+		modalAlertShow("작가명이 입력되지 않았습니다!", "artstActvtyNm");
 		return false;
 	}
 	
@@ -561,7 +561,7 @@ function collectionStorage(){
 		function(confirm){
 			if(confirm){
 				sessionStorage.setItem("work", JSON.stringify({
-																artstNm : $("#artstNm").val(),
+																artstActvtyNm : $("#artstActvtyNm").val(),
 																artstYear : $("#artstYear").val(),
 																workNm : $("#workNm").val(),
 																workFrmYn : $('input[name=workFrmYn]:checked').val(),
