--- a/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
@@ -22,11 +22,16 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
+  <!-- CK에디터 -->
+  <script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
+  
   <!--2022-03-10 추가 -->	
   <style type="text/css">
   	
   	.bTitle{ font-size:15px; }
   	.sTitle{ font-size:12px; height:30px; }
+  	.ck.ck-editor{ max-width: 700px; }
+  	.ck-editor__editable{ min-height: 500px; }
 	
   </style>
   
